@@ -104,19 +104,11 @@ Router.prototype.run = function run(app) {
 }
 
 Router.prototype.call = function call(env, callback) {
-    var routes = this.routes[env.requestMethod];
+    var method = env.requestMethod;
+    var routes = (this.routes[method] || []).concat(this.routes.ANY || []);
+    var tryRoute = tryRoutes(routes, env, callback, this.app);
 
-    if (routes && tryRoutes(routes, env, callback)) {
-        return;
-    }
-
-    routes = this.routes.ANY;
-
-    if (routes && tryRoutes(routes, env, callback)) {
-        return;
-    }
-
-    this.app(env, callback);
+    tryRoute(0);
 }
 
 Router.prototype.toApp = function toApp() {
@@ -126,15 +118,20 @@ Router.prototype.toApp = function toApp() {
     }
 }
 
-function tryRoutes(routes, env, callback) {
-    var route, pattern, keys, app, match;
-    for (var i = 0, len = routes.length; i < len; ++i) {
-        route = routes[i];
-        pattern = route[0];
-        keys = route[1];
-        app = route[2];
+function tryRoutes(routes, env, callback, defaultApp) {
+    return function tryRoute(n) {
+        var route = routes[n];
 
-        match = pattern.exec(env.pathInfo);
+        if (!route) {
+            defaultApp(env, callback);
+            return;
+        }
+
+        var pattern = route[0];
+        var keys = route[1];
+        var app = route[2];
+
+        var match = pattern.exec(env.pathInfo);
 
         if (match) {
             var obj = Array.prototype.slice.call(match, 0);
@@ -163,12 +160,14 @@ function tryRoutes(routes, env, callback) {
                     delete env.route;
                 }
 
-                callback(status, headers, body);
+                if (headers["X-Cascade"] == "pass") {
+                    tryRoute(n + 1);
+                } else {
+                    callback(status, headers, body);
+                }
             });
-
-            return true;
+        } else {
+            tryRoute(n + 1);
         }
     }
-
-    return false;
 }
